tests/sumo/devices/rerouting/assignment/errors/testsuite.sumo
# trips as input, districts used, no connection
trip_with_taz_disconnect

# trips as input, districts used, no connection, ignore route errors
taz_disconnect_ignore

# trips as input, no connection
disconnect

# trips as input, 
# no connection from stop to destination
disconnect_stop

# trips as input, 
# no connection from stop to destination
disconnect_via

# trips as input, no connection, ignore error
disconnect_ignore

# trips as input, 
# no connection from stop to destination
disconnect_via_ignore
unknown_taz
empty_taz
